--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -42,6 +42,7 @@ jobs:
         vagrant box prune
     - name: Setup vagrant VM
       run: |
+        vagrant plugin install vagrant-vbguest
         vagrant up
     - name: Run tests in vagrant VM
       run: |
